crates/cli/src/commands/snapshots/skillfile__commands__add_tui__tests__render_empty_filter.snap
---
source: crates/cli/src/commands/add_tui.rs
expression: "render_to_text(|f| draw(f, &mut app))"
---
 filter: zzz_nonexistent_  Enter confirm  Esc clear  0/5
┌ owner/repo ──────────────────┐┌ Preview ↑↓Tab ───────────────────────────────┐
│                              ││No entries match the filter.                  │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
└──────────────────────────────┘└──────────────────────────────────────────────┘
