crates/cli/src/commands/snapshots/skillfile__commands__add_tui__tests__render_filtered_with_selections.snap
---
source: crates/cli/src/commands/add_tui.rs
expression: "render_to_text(|f| draw(f, &mut app))"
---
 filter: code_  Enter confirm  Esc clear  ✓ 2 selected  1/5
┌ owner/repo ──────────────────┐┌ Preview ↑↓Tab ───────────────────────────────┐
│▶ ○ 📁  code-review  skills/   ││skills/code-review                            │
│                              ││                                              │
│                              ││○ Loading preview...                          │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
└──────────────────────────────┘└──────────────────────────────────────────────┘
