crates/cli/src/commands/snapshots/skillfile__commands__add_tui__tests__render_initial_state.snap
---
source: crates/cli/src/commands/add_tui.rs
expression: "render_to_text(|f| draw(f, &mut app))"
---
 Space toggle  a all  Tab scroll  Enter confirm  Esc cancel  type to filter  5/5
┌ owner/repo ──────────────────┐┌ Preview ↑↓Tab ───────────────────────────────┐
│▶ ○ 📁  browser  skills/       ││skills/browser                                │
│  ○ 📁  code-review  skills/   ││                                              │
│  ○ 📁  commit  skills/        ││○ Loading preview...                          │
│  ○ SKILL.md  skills/debugging││                                              │
│  ○ 📁  testing  skills/       ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
└──────────────────────────────┘└──────────────────────────────────────────────┘
