crates/cli/src/commands/snapshots/skillfile__commands__add_tui__tests__render_with_loaded_preview.snap
---
source: crates/cli/src/commands/add_tui.rs
expression: "render_to_text(|f| draw(f, &mut app))"
---
 Space toggle  a all  Tab scroll  Enter confirm  Esc cancel  type to filter  5/5
┌ owner/repo ──────────────────┐┌ Preview ↑↓Tab ───────────────────────────────┐
│▶ ○ 📁  browser  skills/       ││skills/browser                                │
│  ○ 📁  code-review  skills/   ││                                              │
│  ○ 📁  commit  skills/        ││URL:                                          │
│  ○ SKILL.md  skills/debugging││https://github.com/owner/repo/tree/main/skills│
│  ○ 📁  testing  skills/       ││/browser                                      │
│                              ││                                              │
│                              ││Name:        Browser Automation               │
│                              ││Description: Automate browsing                │
│                              ││Risk:        ⚠ medium                         │
│                              ││Source:      community                        │
│                              ││                                              │
│                              ││──────────────────────────────                │
│                              ││                                              │
│                              ││Usage                                         │
│                              ││  • Navigate pages                            │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
└──────────────────────────────┘└──────────────────────────────────────────────┘
