crates/cli/src/commands/snapshots/skillfile__commands__add_tui__tests__render_with_preview_scroll.snap
---
source: crates/cli/src/commands/add_tui.rs
expression: "render_to_text(|f| draw(f, &mut app))"
---
 Space toggle  a all  Tab scroll  Enter confirm  Esc cancel  type to filter  5/5
┌ owner/repo ──────────────────┐┌ Preview (scroll: 5) ─────────────────────────┐
│▶ ○ 📁  browser  skills/       ││                                              │
│  ○ 📁  code-review  skills/   ││                                              │
│  ○ 📁  commit  skills/        ││                                              │
│  ○ SKILL.md  skills/debugging││                                              │
│  ○ 📁  testing  skills/       ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
└──────────────────────────────┘└──────────────────────────────────────────────┘
